--- a/macos/SeeX.plist
+++ b/macos/SeeX.plist
@@ -17,9 +17,9 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.4</string>
 	<key>CFBundleVersion</key>
-	<string>111</string>
+	<string>112</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© 2017 Nick Korotysh</string>
+	<string>© 2017-2018 Nick Korotysh</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -27,7 +27,7 @@
 		<string>MacOSX</string>
 	</array>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.9.0</string>
+	<string>10.10.0</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>LSApplicationCategoryType</key>
