cmake macos support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.8)
 
+set(CMAKE_OSX_DEPLOYMENT_TARGET 11.0)
+
 project(SeeX VERSION 1.1.0 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -45,10 +47,18 @@ endif()
 
 target_link_libraries(SeeX PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
+if (APPLE)
+    target_sources(SeeX PRIVATE SeeX.icns)
+    set_source_files_properties(SeeX.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+endif()
+
 set_target_properties(SeeX PROPERTIES
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_LIST_DIR}/SeeX.plist
+    MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME}
+    MACOSX_BUNDLE_ICON_FILE SeeX.icns
     MACOSX_BUNDLE_GUI_IDENTIFIER io.github.kolcha.seex
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
 )
